Adding data folder into .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+# Pasta com os dados
+
 # History files
 .Rhistory
 .Rapp.history
 
 # Session Data files
 .RData
-
+/Data/
 # User-specific files
 .Ruserdata
 
